# Comp_Physics_Newman_cpp

./: .gitignore  CMakeLists.txt  README.md  exercise_5_2  exercise_5_6  exercise_5_7
chapter_2/: exercise_2_1.cpp  exercise_2_10ab.cpp  exercise_2_10c.cpp  exercise_2_10d.cpp  exercise_2_11a.cpp  exercise_2_11b.cpp  exercise_2_11c.cpp  exercise_2_12.cpp  exercise_2_13.cpp  exercise_2_2.cpp  exercise_2_3.cpp  exercise_2_4.cpp  exercise_2_5  exercise_2_5.cpp  exercise_2_6.cpp  exercise_2_7.cpp  exercise_2_9.cpp
chapter_3/: exercise_3_1.cpp  exercise_3_2  exercise_3_2.cpp  exercise_3_3.cpp  exercise_3_6.cpp  exercise_3_8.cpp
chapter_4/: exercise_4_2.cpp  exercise_4_4.cpp
chapter_5/: exercise_5_1.cpp  exercise_5_2.cpp  exercise_5_3.cpp  exercise_5_4a.cpp  exercise_5_6.cpp  exercise_5_7.cpp  integration_methods.hpp
